--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://epay.homebank.kz/payform/payment-api.js"></script>
+
   </body>
 </html>
